Slider and more

--- a/app/index.html
+++ b/app/index.html
@@ -61,7 +61,347 @@
     <img class="header__bottom-img" src="images/header-bottom.png" alt="image">
   </header>
   <div class="wrapper">
-    <main class="main"></main>
+    <main class="main">
+      <section class="promo">
+        <div class="container">
+         
+          <div class="promo__inner">
+            <h1 class="promo__title">RBG RATING CARRY</h1>
+            <p class="promo__text">Winning Rated Battlegrounds requires a high level of coordination, team play, and a strong lead to organize a team of...</p>
+            <a class="promo__link" href="#">Buy Now</a>
+          </div>
+        </div>
+        <div class="promo__slider">
+          <img class="promo__slider-image" src="images/promo-image.png" alt="promo-slide" >
+          <img class="promo__slider-image" src="images/promo-image.png" alt="promo-slide" >
+          <img class="promo__slider-image" src="images/promo-image.png" alt="promo-slide" >
+        </div>
+      </section>
+      <div class="offers">
+        <div class="container">
+          <div class="offers__inner">
+            <div class="offers__btns">
+              <button class="offers__btn offers__btn--active" data-tabs-btn='Offera'>Our Services</button>
+              <button class="offers__btn" data-tabs-btn='Offerb'>Our Offers</button>
+              <button class="offers__btn" data-tabs-btn='Offerc'>Our Offers</button>
+              <button class="offers__btn" data-tabs-btn='Offerd'>Our Offers</button>
+              <button class="offers__btn" data-tabs-btn='Offere'>Our Offers</button>
+            </div>
+            <div class="offers__cards" data-tabs-field='Offera'>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+            </div>
+            <div class="offers__cards hidden" data-tabs-field='Offerb'>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$49</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+            </div>
+            <div class="offers__cards hidden" data-tabs-field='Offerc'>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$59</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+            </div>
+            <div class="offers__cards hidden" data-tabs-field='Offerd'>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$69</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+            </div>
+            <div class="offers__cards hidden" data-tabs-field='Offere'>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$79</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+              <div class="offers__card">
+                <img class="offer__card-image" src="images/offer-card.png" alt="images">
+                <div class="offer__card-inner">
+                  <div class="offer__card-text">
+                    <h4 class="offer__card-title">RGD RATINGCARRY</h4>
+                    <button class="offer__card-btn">Buy Now</button>
+                  </div>
+                  <div class="offer__card-price">$39</div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </main>
 
     <footer class="footer">
       <img class="footer__image" src="images/footer-bg.png" alt="background">
