--- a/app/index.html
+++ b/app/index.html
@@ -569,6 +569,120 @@
           </div>
         </div>
       </section>
+      <section class="subscribe">
+        <div class="container">
+         <div class="subscribe__inner">
+          <div class="subscribe__text-block">
+            <h2 class="subscribe__title">SUBSCRIBE</h2>
+            <h4 class="subscribe__subtitle">Subscribe us and you won't miss the new arrivals, as well as discounts and sales.</h4>
+            <form class="subscribe__form" action="#">
+              <input class="form-input subscribe-form-input" type="text" placeholder="Your Email">
+              <button class="form-btn">Subscribe</button>
+            </form>
+          </div>
+          <img src="images/subscribe-img.png" alt="subscribe image" class="subscribe__img-block">
+         </div>
+        </div>
+      </section>
+      <section class="products">
+        <div class="container">
+          <h2 class="products__title">TOP SALE</h2>
+          <div class="products__inner">
+            <div class="products__card">
+              <img class="products__image" src="images/products-image.png" alt="images">
+              <div class="products__card-inner">
+                <h2 class="products__card-title">RGD RATING CARRY</h2>
+                <ul class="products__list">
+                  <li class="products__item">Best of the best</li>
+                  <li class="products__item">Best of the best</li>
+                </ul>
+                <div class="products__cost">
+                  <div class="products__cost-price">
+                    <h6 class="products__cost-title">Cost</h6>
+                    <h5 class="products__cost-actual">$39</h5>
+                  </div>
+                  <a class="products__link" href="#">Buy Now</a>
+                </div>
+              </div>
+            </div>
+            <div class="products__card">
+              <img class="products__image" src="images/products-image.png" alt="images">
+              <div class="products__card-inner">
+                <h2 class="products__card-title">RGD RATING CARRY</h2>
+                <ul class="products__list">
+                  <li class="products__item">Best of the best</li>
+                  <li class="products__item">Best of the best</li>
+                </ul>
+                <div class="products__cost">
+                  <div class="products__cost-price">
+                    <h6 class="products__cost-title">Cost</h6>
+                    <h5 class="products__cost-actual">$39</h5>
+                  </div>
+                  <a class="products__link" href="#">Buy Now</a>
+                </div>
+              </div>
+            </div>
+            <div class="products__card">
+              <img class="products__image" src="images/products-image.png" alt="images">
+              <div class="products__card-inner">
+                <h2 class="products__card-title">RGD RATING CARRY</h2>
+                <ul class="products__list">
+                  <li class="products__item">Best of the best</li>
+                  <li class="products__item">Best of the best</li>
+                </ul>
+                <div class="products__cost">
+                  <div class="products__cost-price">
+                    <h6 class="products__cost-title">Cost</h6>
+                    <h5 class="products__cost-actual">$39</h5>
+                  </div>
+                  <a class="products__link" href="#">Buy Now</a>
+                </div>
+              </div>
+            </div>
+            <div class="products__card">
+              <img class="products__image" src="images/products-image.png" alt="images">
+              <div class="products__card-inner">
+                <h2 class="products__card-title">RGD RATING CARRY</h2>
+                <ul class="products__list">
+                  <li class="products__item">Best of the best</li>
+                  <li class="products__item">Best of the best</li>
+                </ul>
+                <div class="products__cost">
+                  <div class="products__cost-price">
+                    <h6 class="products__cost-title">Cost</h6>
+                    <h5 class="products__cost-actual">$39</h5>
+                  </div>
+                  <a class="products__link" href="#">Buy Now</a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </section>
+      <section class="advantages">
+        <div class="container">
+          <h2 class="advantages__title">OUR ADVANTAGES</h2>
+          <div class="advantages__inner">
+            <div class="advantages__block">
+              <img class="advantages__img" src="images/advantages_timer.png" alt="advantages_like" >
+              <h6 class="advantages__text">Fast execution</h6>
+            </div>
+            <div class="advantages__block">
+              <img class="advantages__img" src="images/advantages_like.png" alt="advantages_like" >
+              <h6 class="advantages__text">Warranty service<br>24/7</h6>
+            </div>
+            <div class="advantages__block">
+              <img class="advantages__img" src="images/advantages_wallet.png" alt="advantages_like" >
+              <h6 class="advantages__text">Сonvenient payment</h6>
+            </div>
+            <div class="advantages__block">
+              <img class="advantages__img" src="images/advantages_discount.png" alt="advantages_like" >
+              <h6 class="advantages__text">Discounts for customers</h6>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -606,8 +720,8 @@
                 Subscribe to newsletter
               </h6>
               <form class="footer__form" action="#">
-                <input class="footer__form-input" type="email" placeholder="Your Email">
-                <button class="footer__form-btn">Subscribe</button>
+                <input class="form-input" type="email" placeholder="Your Email">
+                <button class="form-btn">Subscribe</button>
               </form>
             </div>
           </div>
