--- a/app/index.html
+++ b/app/index.html
@@ -56,6 +56,8 @@
             </li>
           </ul>
         </div>
+        <img class="header__humburger" src="images/humburger.svg" alt="humburger">
+        <img class="header__humburger-close" src="images/close.svg" alt="humburger Close">
       </div>
     </div>
     <img class="header__bottom-img" src="images/header-bottom.png" alt="image">
@@ -571,17 +573,18 @@
       </section>
       <section class="subscribe">
         <div class="container">
-         <div class="subscribe__inner">
-          <div class="subscribe__text-block">
-            <h2 class="subscribe__title">SUBSCRIBE</h2>
-            <h4 class="subscribe__subtitle">Subscribe us and you won't miss the new arrivals, as well as discounts and sales.</h4>
-            <form class="subscribe__form" action="#">
-              <input class="form-input subscribe-form-input" type="text" placeholder="Your Email">
-              <button class="form-btn">Subscribe</button>
-            </form>
+          <div class="subscribe__inner">
+            <div class="subscribe__text-block">
+              <h2 class="subscribe__title">SUBSCRIBE</h2>
+              <h4 class="subscribe__subtitle">Subscribe us and you won't miss the new arrivals, as well as discounts and
+                sales.</h4>
+              <form class="subscribe__form" action="#">
+                <input class="form-input subscribe-form-input" type="text" placeholder="Your Email">
+                <button class="form-btn">Subscribe</button>
+              </form>
+            </div>
+            <img src="images/subscribe-img.png" alt="subscribe image" class="subscribe__img-block">
           </div>
-          <img src="images/subscribe-img.png" alt="subscribe image" class="subscribe__img-block">
-         </div>
         </div>
       </section>
       <section class="products">
@@ -665,19 +668,19 @@
           <h2 class="advantages__title">OUR ADVANTAGES</h2>
           <div class="advantages__inner">
             <div class="advantages__block">
-              <img class="advantages__img" src="images/advantages_timer.png" alt="advantages_like" >
+              <img class="advantages__img" src="images/advantages_timer.png" alt="advantages_like">
               <h6 class="advantages__text">Fast execution</h6>
             </div>
             <div class="advantages__block">
-              <img class="advantages__img" src="images/advantages_like.png" alt="advantages_like" >
+              <img class="advantages__img" src="images/advantages_like.png" alt="advantages_like">
               <h6 class="advantages__text">Warranty service<br>24/7</h6>
             </div>
             <div class="advantages__block">
-              <img class="advantages__img" src="images/advantages_wallet.png" alt="advantages_like" >
+              <img class="advantages__img" src="images/advantages_wallet.png" alt="advantages_like">
               <h6 class="advantages__text">Сonvenient payment</h6>
             </div>
             <div class="advantages__block">
-              <img class="advantages__img" src="images/advantages_discount.png" alt="advantages_like" >
+              <img class="advantages__img" src="images/advantages_discount.png" alt="advantages_like">
               <h6 class="advantages__text">Discounts for customers</h6>
             </div>
           </div>
